Add /api/v2/tags endpoint
