# app/serializers/v2/tag_serializer.rb
@@ -1,0 +1,9 @@
+module V2
+  class TagSerializer
+    include FastJsonapi::ObjectSerializer
+
+    set_key_transform :camel_lower
+
+    attributes :name, :taggings_count
+  end
+end
